finish アプリケーションんを完成させよう 11章

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <div class="list-wrap">
-<%= @lists.each do |list| %>
+<% @lists.each do |list| %>
   <div class="list-box">
     <% if list.image.attached? %>
       <%= image_tag list.image, size: "200x200" %>
@@ -11,5 +11,5 @@
       <span class="list-title"><%=link_to list.title, list_path(list.id) %></span>
     </div>
   </div>
-<% end %>  
+<% end %>
 </div>
